fixes in deploy process

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,27 +1,40 @@
-name: Build
+name: Build and Deploy React Application
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        # Checkout your repository content into GitHub Actions runner
+
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: "14"
+          node-version: "16"
+          # Specify the node version
+
       - name: Install dependencies
         run: npm install
+        # Install node modules
+
       - name: Build
         run: npm run build
-      - name: Archive Production Artifact
-        uses: actions/upload-artifact@v2
+        # Build your React application
+
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          name: dist
-          path: dist/
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build # The folder the action should deploy.
+          clean: true # Automatically remove deleted files from the deployment
+          token: ${{ secrets.GITHUB_TOKEN }} # GitHub token for authorization
+
