--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,5 +36,5 @@ jobs:
           branch: gh-pages # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
           clean: true # Automatically remove deleted files from the deployment
-          token: ${{ secrets.GITHUB_TOKEN }} # GitHub token for authorization
+          token: ${{ secrets.TOKEN }} # GitHub token for authorization
 
