--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,11 +30,17 @@ jobs:
         run: npm run build
         # Build your React application
 
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.5
-        with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: dist # The folder the action should deploy.
-          clean: true # Automatically remove deleted files from the deployment
-          token: ${{ secrets.TOKEN }} # GitHub token for authorization
+- name: Reorganize Output for GitHub Pages
+  run: |
+    mkdir -p calendar
+    cp -R dist/* calendar/
+
+- name: Deploy to GitHub Pages
+  uses: JamesIves/github-pages-deploy-action@4.1.5
+  with:
+    branch: gh-pages # The branch the action should deploy to.
+    folder: calendar # The folder the action should deploy, changed from dist.
+    clean: true # Automatically remove deleted files from the deployment
+    token: ${{ secrets.TOKEN }} # GitHub token for authorization
+
 
